--- a/src/components/Floor/Floor.scss
+++ b/src/components/Floor/Floor.scss
@@ -6,6 +6,8 @@
 .tabs {
   font-size: 18px;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
   li {
     list-style: none;
     display: inline-block;
